src/objects/Campaign_Cost_Line_Item__c.object
<CustomObject>
    <fields>
        <fullName>Allocated_Budget__c</fullName>
        <label>Allocated Budget</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CCLI_Actual_Amount__c</fullName>
        <label>CCLI Actual Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CCLI_Budgeted_Cost__c</fullName>
        <label>CCLI Forecasted Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CCLI_Forecasted_Cost__c</fullName>
        <formula>If  ( CCLI_Actual_Amount__c&gt;0, CCLI_Actual_Amount__c,CCLI_Budgeted_Cost__c )</formula>
        <label>CCLI Forecasted Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CCLI_Notes__c</fullName>
        <label>CCLI Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CH_Funding_Type__c</fullName>
        <description>Returns -1 if contra activity, 1 if MDF activity and 0 if other type of activity</description>
        <formula>CASE( Sub_Department_Code__c , &quot;18 - Partner Contra&quot;, -1, &quot;39 - Partner MDF Activity&quot;, 1,0)</formula>
        <label>CH Funding Type</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Campaign__c</fullName>
        <label>Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Campaign Cost Line Items</relationshipLabel>
        <relationshipName>Campaign_Cost_Line_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Contra_Expense__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Please select this Checkbox only if the cost line item is getting funded by Contra</inlineHelpText>
        <label>Contra Expense</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <defaultValue>Today()</defaultValue>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Department_Code__c</fullName>
        <label>Department Code</label>
        <picklist>
            <picklistValues>
                <fullName>5000 - VP Discretionary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5100 - Global</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5200 - EMEA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5300 - APJ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5400 - TME Lab</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5120 - NA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5600 - Alliances</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6000 - Sales</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Finance_Approved_Budget__c</fullName>
        <description>Budget Approved by Finance</description>
        <label>Finance Approved Budget</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Incremental_Allocation__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Please select this checkbox if dollars added were part of incremental allocation</inlineHelpText>
        <label>Incremental Allocation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Non_Budgeted_Expense__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Non Budgeted Expense</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Receipt_Document_Attached__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Receipt / Document Attached?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sub_Department_Code__c</fullName>
        <label>Sub Department Code</label>
        <picklist>
            <controllingField>Department_Code__c</controllingField>
            <picklistValues>
                <fullName>10 - Local Events (TS, UG, HE etc.)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11 - Regional Events</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12 - Event Properties</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>13 - Collateral (Printing)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>14 - Promotional/Swag</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15 - List Purchase/Rental</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>16 - Customer Programs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>17 - Partner Opex</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>18 - Partner Contra</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>19 - Public Relations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>20 - Consulting / Misc Expenses</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>21 - Marketo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>22 - Website Hosting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>23 - Website/Infrastructure</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>24 - Community &amp; Social</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>25 - Customer Referral Program</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>26 - WebEx (Webinar Platform)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>27 - Digital Marketing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>28 - Global Content (Analysts, Third party Content, Testing etc.)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>29 - Analyst Subscriptions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>30 - Creative Services (video,photography, powerpoint)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>31 - Alliances Program Fees</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>32 - TME Lab</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>33 - Branding</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>34 - Customer Experience Program</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>35 - Content, Creative, Third Party Projects</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>36 - PM Tools</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>37 - PM Equipment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>38 - Federal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>39 - Partner MDFs/MOUs - Field Marketing</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Sub_Dept_Program_Code__c</fullName>
        <label>Sub Dept Program Code</label>
        <picklist>
            <controllingField>Sub_Department_Code__c</controllingField>
            <picklistValues>
                <fullName>17 - 10 CDW - Discretionary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>17 - 11 Partner Focused Nimble Events</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>17 - 12 - Key Partner Events</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>17 - 13 - Partner MDF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>17 - 1 Cisco Appreciation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>17 - 2 Alliance Trade Show</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>17 - 3 Partner Internal Training</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>17 - 4 Partner Sponsorship Fee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>17 - 5 Channel Company Fee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>17 - 6 Deal Reg SPIFF - MacMeetings</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>17 - 7 Gold/Silver MDF - MacMeetings</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>17 - 8 Bronze MDF - MacMeetings</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>17 - 9 Non CDW DMR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>18 - 1 Partner SKO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>18 - 2 MOU - MacMeetings</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>18 - 3 CDW Core MacMeetings</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>23 - 1 - Hosting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>23 - 2 - Maintenance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>23 - 3 - Other Refresh Work</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>23 - 4 - SEO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>23 - 5 - Marketo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>23 - 6 - WebEx</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>23 - 7 - Other Tools, Consulting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>27 - 1 - List Purchase/Rental</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>27 - 2 - Asset Syndication</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>27 - 3 - Banner/Ads/Blogger Ads</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>27 - 4 - SEM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>27 - 5 - Campaign Setup/Creation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>27 - 6 - Online Events</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>27 - 7 - Customer Referral Program</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Campaign Cost Line Item</label>
    <nameField>
        <label>Campaign Cost Line Item Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Campaign Cost Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>